removed open valet toggle since we integrate with toolbar. adjusted toolbar icon size. valet in overlay mode now lays out correctly on mobile

--- a/dev/scss/core/_base.scss
+++ b/dev/scss/core/_base.scss
@@ -53,7 +53,7 @@
 
     .valet-inner {
       float: none;
-      margin: ($valet-margin * 4) auto;
+      margin: ($valet-margin * 5) auto;
     }
   }
 }
