--- a/dev/scss/core/_toolbar.scss
+++ b/dev/scss/core/_toolbar.scss
@@ -3,5 +3,5 @@
 .toolbar .toolbar-bar .toolbar-icon-valet.active::before {
   opacity: 0.8;
   background-image: url('../images/magnifier.svg');
-  background-size: ($font-size-inner * 1.5) ($font-size-inner * 1.5) !important;
+  background-size: ($font-size-inner * 1.25) ($font-size-inner * 1.25) !important;
 }
